--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ section#i2{
 }
 section#i2 > p {
     background-color: rgba(0, 0, 0, 0.575);
-    max-width: 600px;
+    width: 600px;
     padding-bottom: 2px;
     
 }
