--- a/style.css
+++ b/style.css
@@ -1,102 +1,101 @@
 @charset "UTF-8";
+
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
-*{
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
+* {
     margin: 0px;
     padding: 0px;
     font-size: 1em;
 }
-html ,body{
+
+html, body {
     min-height: 100vh;
-    background-color: black;
+    
 }
-header{
-    color: white;
+
+header {
     background-color: black;
+    color: white;
     text-align: center;
 }
-header a {
+
+header > h1 {
+    padding-top: 50px;
+    font-variant: small-caps;
+    font-family: 'Passion One', cursive;
+    font-size: 10vw;
+}
+
+header > p {
+    padding-bottom: 50px;
+}
+
+header a, footer a {
+    color: white;
     text-decoration: none;
-    color: white; 
+    font-weight: bolder;
 }
-header p {
-    font-size: 2em;
-    padding-bottom: 30px;
-}
-header h1 {
-    font-family: "Passion One", sans-serif;
-    padding-top: 20px;
-    font-size: 10em;
-}
-header a:hover{
+
+header a:hover, footer a:hover {
     text-decoration: underline;
-    color: lightgoldenrodyellow;
+    color: lightgoldenrodyellow
 }
-section{
+
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
     padding-left: 30px;
-    font-size: 3em;
+    font-family: 'Sriracha', cursive;
+    font-size: 3.5vw;
 }
-section p {
+
+section > p {
     padding-bottom: 2em;
-    font-family: "Sriracha", cursive;
 }
-section.normal{
+
+section.normal {
     background-color: white;
-    padding-top: 6vh;
-    padding-bottom: 3em;
+    color: black;
 }
-section.bg{
+
+section.bg {
+    background-color: rgb(51, 51, 51);
+    color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+section.bg > p {
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#i1 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    
+}
+
+section#i2 {
+    background-image: url('../imagens/background002.jpg');
+    
+}
+
+footer {
     background-color: black;
     color: white;
-    padding-top: 20px;
-    padding-bottom: 40px;
-    
-
-}
-section#i1{
-    background-image: url(imagens/background001.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: right center;
-}
-section#i1 > p {
-    background-color: rgba(0, 0, 0, 0.575);
-    width: 600px;
-    padding-bottom: 2px;
-    display: inline-block;
-    
-}
-
-
-section#i2{
-    background-image: url(imagens/background002.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: right center;
-    box-shadow: inset -4px 6px 17px 2px rgba(0, 0, 0, 0.473);
-}
-section#i2 > p {
-    background-color: rgba(0, 0, 0, 0.575);
-    width: 600px;
-    padding-bottom: 2px;
-    display: inline-block;
-
-    
-}
-footer{
-    background-color: black;
     text-align: center;
-    color: white;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-size: 2em;
-}
-footer a {
-    text-decoration: none;
-    color: white;
-    padding-top: 10em;
-}
-footer a:hover{
-    text-decoration: underline;
-    color: lightgoldenrodyellow;
+    padding: 10px;
 }
