--- a/style.css
+++ b/style.css
@@ -78,13 +78,13 @@ section.bg > p {
 }
 
 section#i1 {
-    background-image: url('../imagens/background001.jpg');
+    background-image: url(imagens/background001.jpg);
     background-position: right center;
     
 }
 
 section#i2 {
-    background-image: url('../imagens/background002.jpg');
+    background-image: url(imagens/background002.jpg);
     
 }
 
